--- a/config.conf
+++ b/config.conf
@@ -1,1 +1,3 @@
-DISCORD_BOT_TOKEN=MTQxNTY3NzU1NDc2OTI2ODgyNg.GHdNVO.U-Qa7lQL85KqtW-n2j7g3_B9MAuS3FHea43LU8
+DISCORD_BOT_TOKEN=MTQxNTY3NzU1NDc2OTI2ODgyNg.GoZasT.-A3_9mOnnM5AibF9Yy0NugazFFdjpa5qXJZHuk
+
+
